<resources>
    <string name="app_name">Baby Genius</string>

    <string name="lessons">Leçons</string>
    <string name="quizz">Quizz</string>
    <string name="more">Plus ultérieurement ... </string>
    <string name="recherche">Rechercher ... </string>
    <string name="description">Description</string>
    <string name="nom">Nom</string>
    <string name="genre">Genre</string>
    <string name="video">Voir informations ...</string>
    <string name="best_score">Meilleur score : </string>
    <string name="begin">Commencer le quizz</string>
    <string name="start_button">Commencer</string>
    <string name="hint">Une erreur est fatale</string>
    <string name="question">Choisissez la bonne réponse : </string>
    <string name="score">Score : </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>